<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    tools:context=".app.presentation.screen.tab.schedule.edit_medicine.EditMedicineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/main_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_15sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextSemiBold.L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="1dp"
                android:text="@string/medicines"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/medicine_name"
            style="@style/TextBold.XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/medicine_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/et_medicine_name"
            style="@style/TextBase.MD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/et_medicine_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicine_name" />

        <TextView
            android:id="@+id/medicine_dosage"
            style="@style/TextBold.XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/medicine_dosage"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_medicine_name" />

        <EditText
            android:id="@+id/et_medicine_dosage"
            style="@style/TextBase.MD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/et_medicine_dosage"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicine_dosage" />

        <TextView
            android:id="@+id/period"
            style="@style/TextBold.XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/period"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_medicine_dosage" />

        <TextView
            android:id="@+id/from"
            style="@style/TextBold.XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/from"
            app:layout_constraintBottom_toBottomOf="@+id/period_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/period_from" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/period_from"
            style="@style/TextBase.SM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_green"
            android:padding="16dp"
            android:text="@string/_2023_05_05"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/from"
            app:layout_constraintTop_toBottomOf="@+id/period" />

        <TextView
            android:id="@+id/to"
            style="@style/TextBold.XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/to"
            app:layout_constraintBottom_toBottomOf="@+id/period_from"
            app:layout_constraintStart_toEndOf="@+id/period_from"
            app:layout_constraintTop_toTopOf="@+id/period_from" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/period_to"
            style="@style/TextBase.SM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/btn_green"
            android:padding="16dp"
            android:text="@string/_2023_06_05"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/period_from"
            app:layout_constraintStart_toEndOf="@+id/to"
            app:layout_constraintTop_toTopOf="@+id/period_from" />

        <TextView
            android:id="@+id/disease_name"
            style="@style/TextBold.XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/disease_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/period_from" />

        <EditText
            android:id="@+id/et_disease_name"
            style="@style/TextBase.MD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/et_disease_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disease_name" />

        <TextView
            android:id="@+id/add_time"
            style="@style/TextBold.XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_time"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_disease_name" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_add_time"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_plus"
            android:elevation="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_time" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_time" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_green"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rc_time">

            <ImageView
                android:id="@+id/img_save"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextBold.MD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/img_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_save"
                app:layout_constraintTop_toTopOf="@+id/img_save" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>